--- a/Projeto/src/main/webapp/pages/contents/profile.html
+++ b/Projeto/src/main/webapp/pages/contents/profile.html
@@ -6,7 +6,7 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
-                                <img id="userImg" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle userImg" width="200" height="200">
+                                <img id="userImg" src="" class="rounded-circle userImg" width="200" height="200">
                                 <br />
                                 <input type="file" id="imgupload" style="display:none" accept="image/png, image/jpeg" onchange="loadFile(event)">
                                 <label for='imgupload'> <button onclick="return uploadImg()" class="btn btn-info" id="OpenImgUpload" style="display:none">Image Upload</button></label>
