Alteraçoes front-end
Ligaçoes entre users e eventos funcionais
Tabs funcionais com retrocesso
Mecanismos de moderator e owner

--- a/Projeto/src/main/webapp/pages/contents/profile.html
+++ b/Projeto/src/main/webapp/pages/contents/profile.html
@@ -118,18 +118,25 @@
                           <div class="col-sm-6 mb-3">
                               <div class="card h-100">
                                   <div class="card-body">
-                                      
+                                      <h6 style="text-align: center; width:100%">My Events</h6>
+                                      <div id="profile_events" class="container" style="max-height: 300px; overflow: auto; text-overflow: ellipsis">
+
+                                      </div>
+
                                   </div>
                               </div>
                           </div>
                           <div class="col-sm-6 mb-3">
                               <div class="card h-100">
                                   <div class="card-body">
-                                      
+                                        <h6 style="text-align: center; width:100%">Events im participating</h6>
+                                      <div id="profile_participating_events" class="container" style="max-height:300px;overflow: auto; text-overflow:ellipsis">
+
+                                      </div>
                                   </div>
                               </div>
                           </div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
