--- a/Projeto/src/main/webapp/index.html
+++ b/Projeto/src/main/webapp/index.html
@@ -91,7 +91,7 @@
                 else {
                     loadContent("indexTab", "../pages/contents/logoutTab.html");
                     jQuery.ajax({
-                        url: "./pages/contents/login-box.php",
+                        url: "./pages/contents/login-box.html",
                         success: function (data) {
                             $('#login-register-box').html(data);
                         },
