--- a/Projeto/src/main/webapp/pages/contents/createEventForm.html
+++ b/Projeto/src/main/webapp/pages/contents/createEventForm.html
@@ -15,6 +15,10 @@
       if (clickmarker)
           clickmarker.setMap(null);
         document.getElementById("sidebar_content_event_list").style.display = '';
+        document.getElementById("sidebar_content_route_list").style.display = '';
+        document.getElementById("EventsTitle").style.display = '';
+        document.getElementById("RoutesTitle").style.display = '';
+
     });
   });
 </script>
@@ -284,16 +288,21 @@
     <input class="createEventFormInput" type="number" style="text-align:center; max-width:100%; min-width:100%" id="evCapacity" name="Event Capacity" placeholder="Max 100 (Optional, default is 100)">
     <br>
     <br>
+    <label style="width: 100%; font-size: 110%; text-align: center">Dificulty</label>
+    <br>
+    <input class="createEventFormInput" onKeyDown="return false" type="number" min="1" max="5" value="1" style="text-align:center; max-width:100%; min-width:100%" id="evDificulty" name="Event Dificulty" placeholder="1-5">
+    <br>
+    <br>
     <div>
         <label style="width: 100%; font-size: 110%; text-align: center">Contact</label>
         <!-- <input class="createEventFormInput" type="text" style="text-align:center; max-width:100%; min-width:100%" id="evContactEmail" name="Event Contact Email" placeholder="Email (optional)">-->
 
         <input class="createEventFormInput" type="text" style="text-align:center; max-width:100%; min-width:100%" id="evContactPhone" name="Event Contact Number" placeholder="Phone number (Optional)">
     </div>
-        <br>
-            <div style="width: 100%; text-align: center">
-            <label style="font-size: 110%">Privacy: </label><span class="container_lock lock" id="eventPrivacyLock" style="margin-left:10px; display: inline-block" value=""></span><p style="display: inline-block; margin-left:10px;" id="EventPrivacy">PUBLIC</p>
-        </div>
-        <button id="submitFormBtn" style="width: 100%; font-size: 110%; text-align: center" type="button" class="btn btn-primary" onclick="return createEventRequest()" disabled="disabled">Submit</button>
-        <p id="createEventErrMsg" style="display: none; color: red; font-size: 90%; width: 100%; text-align: center"></p>
+    <br>
+    <div style="width: 100%; text-align: center">
+        <label style="font-size: 110%">Privacy: </label><span class="container_lock lock" id="eventPrivacyLock" style="margin-left:10px; display: inline-block" value=""></span><p style="display: inline-block; margin-left:10px;" id="EventPrivacy">PUBLIC</p>
     </div>
+    <button id="submitFormBtn" style="width: 100%; font-size: 110%; text-align: center" type="button" class="btn btn-primary" onclick="return createEventRequest()" disabled="disabled">Submit</button>
+    <p id="createEventErrMsg" style="display: none; color: red; font-size: 90%; width: 100%; text-align: center"></p>
+</div>
