--- a/Projeto/src/main/webapp/pages/contents/register-box.html
+++ b/Projeto/src/main/webapp/pages/contents/register-box.html
@@ -75,6 +75,6 @@
         </div>
     </div>
     
-    <button type="submit" id="registerButton" class="btn btn-block btn-primary font-weight-bold pb-2 pl-3 pr-3 pt-2" onclick="return register()" disabled="disabled">Register</button>
+    <button id="registerButton" class="btn btn-block btn-primary font-weight-bold pb-2 pl-3 pr-3 pt-2" onclick="register(); return false" disabled="disabled">Register</button>
     <p style="text-align: center; color: #4f859c;" id="result"></p>
 </form>
