Talvez esteja final
Qualquer alteração faz-se depois

--- a/Projeto/src/main/webapp/index.html
+++ b/Projeto/src/main/webapp/index.html
@@ -114,6 +114,7 @@
             function SignIn() {
                 isRememberMe();
                 login();
+                return false;
             }
         </script>
 
