hiding stuff in website

--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -399,6 +399,7 @@
                                     </div>
                                 </div>
                                 <hr>
+                                <div id="qrcode_section">
                                 <h6 style="text-align:center">Print these and display them at your event location so users can confirm presence & leave</h6>
                                 <div class="row">
                                     <div class="col" style="text-align:center">
@@ -410,7 +411,7 @@
                                         <img id="leaveEventCode" style="display:none;" src="" width=200 height=200 class="qr-code img-thumbnail img-responsive" />
                                     </div>
                                 </div>
-
+                                </div>
 
 
                                 <hr>
