--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -690,7 +690,7 @@
             </div>
         </div>
     </div>
-    <div id="Statistics" class="tabcontent" style="display:none">
+    <div id="Statistics" class="tabcontent">
 
     </div>
     <!--Footer-->
