--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -571,7 +571,7 @@
                             <div class="card">
                                 <div class="card-body">
                                     <div class="d-flex flex-column align-items-center text-center">
-                                        <img id="RouteImage" src="https://bootdey.com/img/Content/avatar/avatar7.png" width="200" height="200">
+                                        <!--<img id="RouteImage" src="" width="200" height="200">-->
                                         <div class="mt-3">
 
                                             <p id="route_id" style="display:none"></p>
