disabling debug operations for release deployment

--- a/Projeto/src/main/webapp/index.html
+++ b/Projeto/src/main/webapp/index.html
@@ -34,6 +34,10 @@
                 <div class="col-md-9 col-xl-8 ml-auto mr-auto" id="login-register-box"></div>
                 <p style="text-align: center; margin-top: 10px;"><a href="#" id="login-registerLink" data-target="register-box"></a></p>
             </div>
+            <div style="margin-top: 100px; width:100%; text-align:center">
+            	<iframe style="border: solid; border-width:2px; border-color:black;" width="640" height="300" src="https://www.youtube.com/embed/FEh28JAAqgI">
+				 </iframe> 
+            </div>
         </section>
         <section class="pb-5 pt-5 text-center" id="About-section">
             <div class="container">
