--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -400,7 +400,7 @@
                                 </div>
                                 <hr>
                                 <div id="qrcode_section">
-                                <h6 style="text-align:center">Print these and display them at your event location so users can confirm presence & leave</h6>
+                                <h6 style="text-align:center">Print these and display them at your event location so users with the android app can confirm presence & leave</h6>
                                 <div class="row">
                                     <div class="col" style="text-align:center">
                                         <h6 style="text-align:center">Confirm presence QR code</h6>
