--- a/Projeto/src/main/webapp/pages/contents/loggedTab.html
+++ b/Projeto/src/main/webapp/pages/contents/loggedTab.html
@@ -1,5 +1,5 @@
 <li class="nav-item">
-    <a class="nav-link" href="../pages/App.html#Map">Voluntier!</a>
+    <a class="nav-link" href="../pages/App.html#Map">Start Volunteering</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="index.html#About-section">About</a>
