--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -39,7 +39,7 @@
         </div>
         <a style="font-family: 'Alice', serif; font-size: 15px; color: #000000; letter-spacing: 1px; text-align: center;" id="user_tag"></a>
         <!--Ver se o user tem imagem, se nao tiver mete com display none-->
-        <img id="user64img" src="" class="rounded-circle" width="30" height="30" style="margin-left: 10px">
+        <img id="user64img" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="rounded-circle" width="30" height="30" style="margin-left: 10px">
         <i style="        color: green;
         text-shadow: none;
         margin-left: 10px
@@ -436,7 +436,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="d-flex flex-column align-items-center text-center">
-                                    <img id="user_userImg" src="" class="rounded-circle userImg" width="200" height="200">
+                                    <img id="user_userImg" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="rounded-circle userImg" width="200" height="200">
                                     <br />
                                     <div class="mt-3">
                                         <h4 id="user_username">Username</h4>
