Final changes to website
Maybe there can still be some upgrades if there is time and most importantly patience

--- a/Projeto/src/main/webapp/pages/App.html
+++ b/Projeto/src/main/webapp/pages/App.html
@@ -63,14 +63,15 @@
             <div class="modal-content">
                 <span class="close" onclick="document.getElementById('myModal').style='display:none'">&times;</span>
                 <p>The map displays several markers.</p>
-                <p>The <span style="color:red">red</span> ones represent events, all of which are not expired.</p>
-                <p>The <span style="color:gray">gray</span> ones represent events, all of which are also not expired, but are private and require permission to join.</p>
-                <p>The <span style="color:blue">blue</span> ones represent routes. They mark the route's origin, which can then be expanded to show the whole route.</p>
+                <p>The <b><span style="color:red">red</span></b> ones represent events, all of which are not expired.</p>
+                <p>The <b><span style="color:gray">gray</span></b> ones represent events, all of which are also not expired, but are private and require permission to join.</p>
+                <p>The <b><span style="color:blue">blue</span></b> ones represent routes. They mark the route's origin, which can then be expanded to show the whole route.</p>
                 <br />
-                <p>You can create events clicking the bottom right corner button labeled "Create Event", and filling the form correctly.</p>
-                <p>The same can be done with routes by clicking the button above "Create Route". The maximum events per route is 4, and you choose them by selecting them on the map</p>
+                <p>You can create events clicking the bottom right corner button labeled <b>"Create Event"</b>, and filling the form correctly.</p>
+                <p>The same can be done with routes by clicking the button above <b>"Create Route"</b>. The maximum events per route is 4, and you choose them by selecting them on the map</p>
                 <p>You can filter between events and routes using the button on the top right corner, and going through the options.</p>
                 <p>The rest of the buttons are pretty much self explanatory.</p>
+                <p><b>Be aware: The markers only load after a certain zoom level. If by any chance they disappear from sight, simply zoom out and in to make them appear.</b></p>
                 <br />
                 <p>On the left side of your screen you can see the list of Events and Routes that have been loaded on the map. These, along with the markers, get loaded as you navigate through the map using the drag and zoom options</p>
                 <p>Take some time to explore this section and feel free to navigate to the other tabs, which offer:</p>
